Strange translation text behaviour #66373

Closed
opened 2019-07-03 13:27:50 +02:00 by Hoang Duy Tran · 8 comments
Member

OS: Linux mint 19.1
Kernel: 4.15.0-20-generic x86_64

Graphics:
Device-1: Intel 4th Gen Core Processor Integrated Graphics vendor: Hewlett-Packard
Device-2: NVIDIA GK208M [GeForce GT 740M] vendor: Hewlett-Packard

Blender version:
Blender 2.80 (sub 74)
build date: 2019-07-03
build time: 02:04:42
build commit date: 2019-07-02
build commit time: 22:33
build hash: 50ccbe6bb2
build platform: Linux

Played a little with Physics and noticed a little strange behaviour on this screen:

Screenshot from 2019-07-03 12-16-10.png

When switched to Vietnamese and vary the 'Cache Step' (from 1 to 4 says) - using mouse pointer clicking the little arrow at each end of the control to in/decrease the value - notice the text '1 frames in memory (204 B).' changing erratically from Vietnamese to English and back. Here is an example:

At frame 1
Screenshot from 2019-07-03 12-05-35.png

To frame 4
Screenshot from 2019-07-03 12-05-53.png

I'm attaching the blender file used for testing and the 'blender.mo' for the Vietnamese translation I'm using. Drop the 'blender.mo' for Vietnamese at the location '~/2.80/datafiles/locale/vi/LC_MESSAGES' before changing the interface to Vietnamese (enable only the 'tooltips and interface').

20190703_particles_deflection_0001.blend

blender.mo

OS: Linux mint 19.1 Kernel: 4.15.0-20-generic x86_64 Graphics: Device-1: Intel 4th Gen Core Processor Integrated Graphics vendor: Hewlett-Packard Device-2: NVIDIA GK208M [GeForce GT 740M] vendor: Hewlett-Packard Blender version: Blender 2.80 (sub 74) build date: 2019-07-03 build time: 02:04:42 build commit date: 2019-07-02 build commit time: 22:33 build hash: 50ccbe6bb233 build platform: Linux Played a little with Physics and noticed a little strange behaviour on this screen: ![Screenshot from 2019-07-03 12-16-10.png](https://archive.blender.org/developer/F7563687/Screenshot_from_2019-07-03_12-16-10.png) When switched to Vietnamese and vary the 'Cache Step' (from 1 to 4 says) - using mouse pointer clicking the little arrow at each end of the control to in/decrease the value - notice the text '1 frames in memory (204 B).' changing erratically from Vietnamese to English and back. Here is an example: At frame 1 ![Screenshot from 2019-07-03 12-05-35.png](https://archive.blender.org/developer/F7563695/Screenshot_from_2019-07-03_12-05-35.png) To frame 4 ![Screenshot from 2019-07-03 12-05-53.png](https://archive.blender.org/developer/F7563694/Screenshot_from_2019-07-03_12-05-53.png) I'm attaching the blender file used for testing and the 'blender.mo' for the Vietnamese translation I'm using. Drop the 'blender.mo' for Vietnamese at the location '~/2.80/datafiles/locale/vi/LC_MESSAGES' before changing the interface to Vietnamese (enable only the 'tooltips and interface'). [20190703_particles_deflection_0001.blend](https://archive.blender.org/developer/F7563700/20190703_particles_deflection_0001.blend) [blender.mo](https://archive.blender.org/developer/F7563705/blender.mo)
Author
Member

Added subscriber: @hoanguk

Added subscriber: @hoanguk

Added subscriber: @brecht

Added subscriber: @brecht

Please use the bug submission form when reporting bugs, do not create custom tasks.
https://developer.blender.org/maniphest/task/edit/form/1/

Please use the bug submission form when reporting bugs, do not create custom tasks. https://developer.blender.org/maniphest/task/edit/form/1/

Added subscribers: @mont29, @mano-wii

Added subscribers: @mont29, @mano-wii
Bastien Montagne was assigned by Germano Cavalcante 2019-07-03 15:22:29 +02:00

A guideline for making a good bug report can be found here: https://wiki.blender.org/wiki/Process/Bug_Reports

@mont29, you've been working in this area recently.
It's also possible to reproduce the bug with some other languages (like Spanish).

A guideline for making a good bug report can be found here: https://wiki.blender.org/wiki/Process/Bug_Reports @mont29, you've been working in this area recently. It's also possible to reproduce the bug with some other languages (like Spanish).

Issue happens because that info is often generated by worker threads (instead of main one used by UI code), and boost i18n code does not work well from threads (here it just return unstranslated string it'd seem).

Will check on how to always generate that info from main thread (using probably some dirty tag + generate-on-access mechanism), but would not consider this a top priority issue. ;)

Issue happens because that info is often generated by worker threads (instead of main one used by UI code), and boost i18n code does not work well from threads (here it just return unstranslated string it'd seem). Will check on how to always generate that info from main thread (using probably some dirty tag + generate-on-access mechanism), but would not consider this a top priority issue. ;)

This issue was referenced by 03bf84db86

This issue was referenced by 03bf84db86bc023cfad501b1b4764cecb6435422

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66373
No description provided.